--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,9 +32,9 @@ es:
     sidebars:
       filters: "Filtros"
     pagination:
-      empty: "Ningún(a) %{model} encontrado"
+      empty: "Ningún %{model} encontrado"
       one: "Mostrando <b>1</b> %{model}"
-      one_page: "Mostrando <b>todos(as) los(as) %{n}</b> %{model}"
+      one_page: "Mostrando <b>%{n}</b> %{model}"
       multiple: "Mostrando %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> de un total de <b>%{total}</b>"
     blank_slate:
       content: "No hay %{resource_name} aún."
@@ -96,4 +96,4 @@ es:
     required: "requerido"
   time:
     formats:
-      long: "%d-%m-%Y"
+      long: "%d/%m/%Y"
